Conclusion for pour TP3

--- a/TP3.ipynb
+++ b/TP3.ipynb
@@ -303,6 +303,30 @@
     "plt.ylim(0, 1.5)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**SVM** a ses avantages et ses inconvénients:\n",
+    "### Avantages: \n",
+    "- Cette méthode permets d'un taux d'erreur stable. \n",
+    "- Elle nécessite pas le temps de calcul important (les séparateurs sont hyperplans).\n",
+    "- Elle est efficace lors de la mise en production.\n",
+    "- **SVM** fonctionne correctement même pour les jeux de données ayant une grande dimension (beaucoup de caractéristiques - features), tandis que le nombre d'observation reste limité.\n",
+    "\n",
+    "### Inconvénients:\n",
+    "- **SVM** demande une connaissance profonde en statistique, des connaissances métiers afin de pouvoir choisir la fonction de noyau (kernel) adapté à la forme des données.\n",
+    "- Cette méthode a difficulté lors qu'on a un grand nombre d'observation: Elle a besoin le mémoire en cache pour résoudre le problème d'optimisation.\n",
+    "- Elle ne donne pas l'indice sur la pertinence des features."
+   ]
   }
  ],
  "metadata": {
