--- a/non-superviser/TP4_Clustering.ipynb
+++ b/non-superviser/TP4_Clustering.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,17 +349,156 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Algorithme SNN"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "from sklearn.neighbors import kneighbors_graph\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset = np.loadtxt('cham-data/t4.8k.dat')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paramètre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = dataset\n",
+    "k = 1000\n",
+    "seuil = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  (0, 4610)\t1.0655494817365376\n",
+      "  (0, 1182)\t1.2051404067680216\n",
+      "  (0, 6609)\t1.4707163479243601\n",
+      "  (0, 1377)\t1.584840157251508\n",
+      "  (0, 2452)\t2.61457432099874\n",
+      "  (0, 2707)\t2.973366560654779\n",
+      "  (0, 3226)\t3.7159098988005654\n",
+      "  (0, 5157)\t4.43659692151564\n",
+      "  (0, 7514)\t4.973434157403611\n",
+      "  (0, 4355)\t6.146115292117863\n",
+      "  (0, 1132)\t6.648733529329933\n",
+      "  (0, 3920)\t6.663658535374696\n",
+      "  (0, 2854)\t7.031933895170022\n",
+      "  (0, 5290)\t7.163214690070097\n",
+      "  (0, 4872)\t7.40100660194389\n",
+      "  (0, 7486)\t7.504060803192165\n",
+      "  (0, 181)\t7.761964356529147\n",
+      "  (0, 2356)\t7.849079163570787\n",
+      "  (0, 6165)\t7.931159169629748\n",
+      "  (0, 5446)\t8.232935397051643\n",
+      "  (0, 645)\t8.239174175607886\n",
+      "  (0, 5663)\t8.347862803497067\n",
+      "  (0, 2681)\t8.475395194917176\n",
+      "  (0, 5541)\t8.606340820002252\n",
+      "  (0, 7519)\t9.152726072488395\n",
+      "  :\t:\n",
+      "  (7999, 7885)\t70.89525089158022\n",
+      "  (7999, 4376)\t70.90350185033277\n",
+      "  (7999, 6738)\t71.0080868989307\n",
+      "  (7999, 1722)\t71.01642702789289\n",
+      "  (7999, 5326)\t71.04631983917254\n",
+      "  (7999, 4445)\t71.2036219660914\n",
+      "  (7999, 5606)\t71.22454458670873\n",
+      "  (7999, 1768)\t71.24708145308162\n",
+      "  (7999, 2257)\t71.28546164021118\n",
+      "  (7999, 7729)\t71.31201783980043\n",
+      "  (7999, 3799)\t71.32887501280253\n",
+      "  (7999, 4077)\t71.3643471399551\n",
+      "  (7999, 3624)\t71.39392913041033\n",
+      "  (7999, 2889)\t71.47258743914342\n",
+      "  (7999, 5788)\t71.4816168016365\n",
+      "  (7999, 4831)\t71.49957902478876\n",
+      "  (7999, 5248)\t71.54030149800946\n",
+      "  (7999, 1782)\t71.55079192173913\n",
+      "  (7999, 7733)\t71.62679576668218\n",
+      "  (7999, 4839)\t71.74856264592358\n",
+      "  (7999, 1735)\t71.76707940894669\n",
+      "  (7999, 7121)\t71.78538249813822\n",
+      "  (7999, 3338)\t71.86667799449206\n",
+      "  (7999, 6325)\t71.91760239813378\n",
+      "  (7999, 7406)\t71.92269567770715\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Construct similarity mattrix:\n",
+    "similarity_graph = kneighbors_graph(\n",
+    "    X, \n",
+    "    n_neighbors = k,\n",
+    "    mode='distance', \n",
+    "    metric='euclidean',\n",
+    "     p=2) # n x n\n",
+    "\n",
+    "print(similarity_graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "matrix = similarity_graph.toarray()\n",
+    "matrix = 1 * (matrix > 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 1, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [1, 0, 0, ..., 0, 0, 1],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   }
  ],
