--- a/non-superviser/TP4_Clustering.ipynb
+++ b/non-superviser/TP4_Clustering.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,17 +357,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.neighbors import kneighbors_graph\n",
+    "from sklearn.neighbors import kneighbors_graph, NearestNeighbors\n",
     "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,123 +383,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "X = dataset\n",
-    "k = 1000\n",
+    "k = 10\n",
     "seuil = 200"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Construct similarity mattrix"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "similarity_graph = kneighbors_graph(\n",
+    "    X, \n",
+    "    n_neighbors = X.shape[0] - 1,\n",
+    "    mode='distance', \n",
+    "    metric='euclidean',\n",
+    "     p=2) # n x n\n",
+    "\n",
+    "similarity_matrix = similarity_graph.toarray()\n",
+    "similarity_matrix = 1 / (1 + similarity_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sparsify the similarity matrix using k-nn sparsification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4610, 1182, 6609, ..., 5157, 7514, 4355],\n",
+       "       [3899,  880, 5340, ..., 3045,  714, 6797],\n",
+       "       [4982, 1857, 6233, ..., 5489, 5783, 5949],\n",
+       "       ...,\n",
+       "       [7107, 1801, 2382, ..., 4386, 2051, 1820],\n",
+       "       [ 604, 6493, 3499, ..., 2983, 7051, 4458],\n",
+       "       [1336, 3041, 2511, ...,  341, 2212, 3605]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neigh = NearestNeighbors(n_neighbors = k)\n",
+    "neigh.fit(similarity_matrix)\n",
+    "neigh.kneighbors(return_distance = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  (0, 4610)\t1.0655494817365376\n",
-      "  (0, 1182)\t1.2051404067680216\n",
-      "  (0, 6609)\t1.4707163479243601\n",
-      "  (0, 1377)\t1.584840157251508\n",
-      "  (0, 2452)\t2.61457432099874\n",
-      "  (0, 2707)\t2.973366560654779\n",
-      "  (0, 3226)\t3.7159098988005654\n",
-      "  (0, 5157)\t4.43659692151564\n",
-      "  (0, 7514)\t4.973434157403611\n",
-      "  (0, 4355)\t6.146115292117863\n",
-      "  (0, 1132)\t6.648733529329933\n",
-      "  (0, 3920)\t6.663658535374696\n",
-      "  (0, 2854)\t7.031933895170022\n",
-      "  (0, 5290)\t7.163214690070097\n",
-      "  (0, 4872)\t7.40100660194389\n",
-      "  (0, 7486)\t7.504060803192165\n",
-      "  (0, 181)\t7.761964356529147\n",
-      "  (0, 2356)\t7.849079163570787\n",
-      "  (0, 6165)\t7.931159169629748\n",
-      "  (0, 5446)\t8.232935397051643\n",
-      "  (0, 645)\t8.239174175607886\n",
-      "  (0, 5663)\t8.347862803497067\n",
-      "  (0, 2681)\t8.475395194917176\n",
-      "  (0, 5541)\t8.606340820002252\n",
-      "  (0, 7519)\t9.152726072488395\n",
-      "  :\t:\n",
-      "  (7999, 7885)\t70.89525089158022\n",
-      "  (7999, 4376)\t70.90350185033277\n",
-      "  (7999, 6738)\t71.0080868989307\n",
-      "  (7999, 1722)\t71.01642702789289\n",
-      "  (7999, 5326)\t71.04631983917254\n",
-      "  (7999, 4445)\t71.2036219660914\n",
-      "  (7999, 5606)\t71.22454458670873\n",
-      "  (7999, 1768)\t71.24708145308162\n",
-      "  (7999, 2257)\t71.28546164021118\n",
-      "  (7999, 7729)\t71.31201783980043\n",
-      "  (7999, 3799)\t71.32887501280253\n",
-      "  (7999, 4077)\t71.3643471399551\n",
-      "  (7999, 3624)\t71.39392913041033\n",
-      "  (7999, 2889)\t71.47258743914342\n",
-      "  (7999, 5788)\t71.4816168016365\n",
-      "  (7999, 4831)\t71.49957902478876\n",
-      "  (7999, 5248)\t71.54030149800946\n",
-      "  (7999, 1782)\t71.55079192173913\n",
-      "  (7999, 7733)\t71.62679576668218\n",
-      "  (7999, 4839)\t71.74856264592358\n",
-      "  (7999, 1735)\t71.76707940894669\n",
-      "  (7999, 7121)\t71.78538249813822\n",
-      "  (7999, 3338)\t71.86667799449206\n",
-      "  (7999, 6325)\t71.91760239813378\n",
-      "  (7999, 7406)\t71.92269567770715\n"
+      "[[0 5]\n",
+      " [1 2]]\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "index 5 is out of bounds for axis 0 with size 2",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-86-8205a21a2bf1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/usr/local/insa/anaconda/lib/python3.6/site-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 5 is out of bounds for axis 0 with size 2"
      ]
     }
    ],
    "source": [
-    "# Construct similarity mattrix:\n",
-    "similarity_graph = kneighbors_graph(\n",
-    "    X, \n",
-    "    n_neighbors = k,\n",
-    "    mode='distance', \n",
-    "    metric='euclidean',\n",
-    "     p=2) # n x n\n",
-    "\n",
-    "print(similarity_graph)"
+    "m = np.matrix([[1,2,3,7,8,1],[6,4,5,7,6,15]])\n",
+    "idx = np.argpartition(m, kth=2)\n",
+    "print(idx[:,:2])\n",
+    "print(m[:][idx[:,1]])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix = similarity_graph.toarray()\n",
-    "matrix = 1 * (matrix > 0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0, 0, 1, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [1, 0, 0, ..., 0, 0, 1],\n",
-       "       ...,\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 0, ..., 0, 0, 0],\n",
-       "       [0, 0, 1, ..., 0, 0, 0]])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
