--- a/non-superviser/TP4_Clustering.ipynb
+++ b/non-superviser/TP4_Clustering.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,19 +345,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partie 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Algorithme SNN"
+    "## Partie 2\n",
+    "### Algorithme SNN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,12 +390,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct similarity mattrix"
+    "* Construct similarity mattrix\n",
+    "\n",
+    "(save in file to avoid learn time)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,75 +409,245 @@
     "     p=2) # n x n\n",
     "\n",
     "similarity_matrix = similarity_graph.toarray()\n",
-    "similarity_matrix = 1 / (1 + similarity_matrix)"
+    "similarity_matrix = 1 / (1 + similarity_matrix)\n",
+    "np.save('similarity_matrix', similarity_matrix)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Sparsify the similarity matrix using k-nn sparsification"
+    "**(check point)**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[4610, 1182, 6609, ..., 5157, 7514, 4355],\n",
-       "       [3899,  880, 5340, ..., 3045,  714, 6797],\n",
-       "       [4982, 1857, 6233, ..., 5489, 5783, 5949],\n",
-       "       ...,\n",
-       "       [7107, 1801, 2382, ..., 4386, 2051, 1820],\n",
-       "       [ 604, 6493, 3499, ..., 2983, 7051, 4458],\n",
-       "       [1336, 3041, 2511, ...,  341, 2212, 3605]])"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "neigh = NearestNeighbors(n_neighbors = k)\n",
-    "neigh.fit(similarity_matrix)\n",
-    "neigh.kneighbors(return_distance = False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0 5]\n",
-      " [1 2]]\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "index 5 is out of bounds for axis 0 with size 2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-86-8205a21a2bf1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0midx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0margpartition\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkth\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/usr/local/insa/anaconda/lib/python3.6/site-packages/numpy/matrixlib/defmatrix.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m    188\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    189\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 190\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mN\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndarray\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    191\u001b[0m         \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    192\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mFalse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 5 is out of bounds for axis 0 with size 2"
+      "similarity_matrix loaded, dimension (8000, 8000)\n"
      ]
     }
    ],
    "source": [
+    "similarity_matrix = np.load('similarity_matrix.npy')\n",
+    "print(\"similarity_matrix loaded, dimension\",similarity_matrix.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Sparsify the similarity matrix using k-nn sparsification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NearestNeighbors(algorithm='auto', leaf_size=30, metric='minkowski',\n",
+       "         metric_params=None, n_jobs=-1, n_neighbors=10, p=2, radius=1.0)"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "neigh = NearestNeighbors(n_neighbors = k, n_jobs=-1)\n",
+    "neigh.fit(similarity_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(save in file to avoid learn time)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_neighbor_indices = neigh.kneighbors(return_distance = False)\n",
+    "np.save('k_neighbor_indices', k_neighbor_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(check point)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k_neighbor_indices loaded, dimension (8000, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "k_neighbor_indices = np.load('k_neighbor_indices.npy')\n",
+    "print(\"k_neighbor_indices loaded, dimension\",k_neighbor_indices.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linking_matrix = np.zeros(similarity_matrix.shape)\n",
+    "linking_matrix[np.arange(similarity_matrix.shape[1])[:, None], k_neighbor_indices] = 1\n",
+    "np.save('linking_matrix', linking_matrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10., 10., 10., ..., 10., 10., 10.])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Verify if we have sum = k at every line\n",
+    "np.sum(linking_matrix, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(check point)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linking_matrix = np.load('linking_matrix.npy')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* For every point in the graph, calculate the total strength of links coming out of the point. (Steps 1-4 are identical to the Jarvis – Patrick scheme.) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Testing**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "top  3  = [[5157 4610 6609 ... 2707 2452 1377]\n",
+      " [6366 6797 5340 ... 2451  880  714]\n",
+      " [5489 5949 6233 ... 4982 1857 1762]\n",
+      " ...\n",
+      " [6616 7107 6469 ... 2051 1820 1801]\n",
+      " [6493 5057 7051 ... 2983 2966 2222]\n",
+      " [6227 7503 3923 ... 2511 2212 1336]]\n",
+      "snn =  [[ 0  0  3  7  8  0]\n",
+      " [ 6  0  0  7  0 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kth = 3\n",
     "m = np.matrix([[1,2,3,7,8,1],[6,4,5,7,6,15]])\n",
-    "idx = np.argpartition(m, kth=2)\n",
-    "print(idx[:,:2])\n",
-    "print(m[:][idx[:,1]])"
+    "idx = np.argpartition(m, kth=kth)\n",
+    "m[np.arange(m.shape[0])[:, None], idx[:, :kth]] = 0\n",
+    "\n",
+    "print('top ' , kth , ' =', top)\n",
+    "print('snn = ', m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test axis 1 = [[18]\n",
+      " [28]]\n",
+      "test axis 0 = [[ 6  0  3 14  8 15]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('test axis 1 =', np.sum(m, axis=1))\n",
+    "print('test axis 0 =', np.sum(m, axis=0))"
    ]
   }
  ],
@@ -501,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
